[gd_scene load_steps=8 format=2]

[ext_resource path="res://Asset/Theme/theme.tres" type="Theme" id=1]
[ext_resource path="res://Asset/Fonts/Kingnam-Maiyuan-2.otf" type="DynamicFontData" id=2]
[ext_resource path="res://Asset/Scripts/StartMenu.gd" type="Script" id=3]

[sub_resource type="DynamicFont" id=1]
size = 50
outline_size = 2
font_data = ExtResource( 2 )

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("VBoxContainer3/Menu/MainMenu:anchor_right")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 1.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("VBoxContainer3/Title:rect_rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("VBoxContainer3/Menu/OptionMenu:anchor_left")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 1.0 ]
}

[sub_resource type="Animation" id=3]
resource_name = "show"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("VBoxContainer3/Menu/MainMenu:anchor_right")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 1.0, 0.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("VBoxContainer3/Menu/OptionMenu:anchor_left")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 1.0, 0.0 ]
}

[sub_resource type="Animation" id=4]
resource_name = "tile_rotation"
length = 3.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("VBoxContainer3/Title:rect_rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.6, 1, 1.5, 2, 3 ),
"transitions": PoolRealArray( 1, -2, 1, -2, -2, 1 ),
"update": 0,
"values": [ 0.0, 10.0, 0.0, -15.0, 0.0, 0.0 ]
}

[node name="StartMenu" type="Node2D"]
script = ExtResource( 3 )

[node name="StartLayer" type="CanvasLayer" parent="."]

[node name="Control" type="Control" parent="StartLayer"]
margin_right = 1024.0
margin_bottom = 600.0

[node name="VBoxContainer3" type="VBoxContainer" parent="StartLayer/Control"]
anchor_top = -0.0933333
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 123.0
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Title" type="Label" parent="StartLayer/Control/VBoxContainer3"]
margin_right = 1024.0
margin_bottom = 51.0
rect_pivot_offset = Vector2( 512, 25 )
size_flags_vertical = 1
custom_colors/font_outline_modulate = Color( 0.815686, 0.0941176, 0.839216, 1 )
custom_fonts/font = SubResource( 1 )
text = "教你做平台游戏"
align = 1

[node name="Menu" type="Control" parent="StartLayer/Control/VBoxContainer3"]
margin_top = 55.0
margin_right = 1024.0
margin_bottom = 55.0

[node name="MainMenu" type="VBoxContainer" parent="StartLayer/Control/VBoxContainer3/Menu"]
anchor_right = 1.0
margin_top = 156.0
margin_bottom = 312.0
grow_horizontal = 0
theme = ExtResource( 1 )

[node name="StartBtn" type="Button" parent="StartLayer/Control/VBoxContainer3/Menu/MainMenu"]
margin_right = 1024.0
margin_bottom = 32.0
text = "开始游戏"

[node name="OptionBtn" type="Button" parent="StartLayer/Control/VBoxContainer3/Menu/MainMenu"]
margin_top = 62.0
margin_right = 1024.0
margin_bottom = 94.0
text = "设置"

[node name="ExitBtn" type="Button" parent="StartLayer/Control/VBoxContainer3/Menu/MainMenu"]
margin_top = 124.0
margin_right = 1024.0
margin_bottom = 156.0
text = "退出"

[node name="OptionMenu" type="VBoxContainer" parent="StartLayer/Control/VBoxContainer3/Menu"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = 5.0
margin_top = 156.0
margin_bottom = 312.0
theme = ExtResource( 1 )

[node name="BgmBtn" type="Button" parent="StartLayer/Control/VBoxContainer3/Menu/OptionMenu"]
margin_right = 122.0
margin_bottom = 32.0
text = "Bgm:开"

[node name="SfxBtn" type="Button" parent="StartLayer/Control/VBoxContainer3/Menu/OptionMenu"]
margin_top = 62.0
margin_right = 122.0
margin_bottom = 94.0
text = "Sfx：开"

[node name="BackBtn" type="Button" parent="StartLayer/Control/VBoxContainer3/Menu/OptionMenu"]
margin_top = 124.0
margin_right = 122.0
margin_bottom = 156.0
text = "返回"

[node name="Transition" type="AnimationPlayer" parent="StartLayer/Control"]
autoplay = "tile_rotation"
anims/RESET = SubResource( 2 )
anims/show = SubResource( 3 )
anims/tile_rotation = SubResource( 4 )

[connection signal="animation_finished" from="StartLayer/Control/Transition" to="." method="_on_Transition_animation_finished"]
